Fix: Color contrast with errors
Fix #3365

--- a/packages/extension-browser/src/devtools/views/app.photon.css
+++ b/packages/extension-browser/src/devtools/views/app.photon.css
@@ -20,7 +20,7 @@
     --link-color: var(--highlight-bg);
     --link-alt-color: #bf49da;
 
-    --status-bg-error: #d83b01;
+    --status-bg-error: #c02e00;
     --status-bg-pass: #00864b;
     --status-bg-warn: #f2c811;
     --status-bg-info: #cecece;
